# orderedsets

./: .gitignore  LICENSE  README.md  pyproject.toml  run-mypy.sh  run-pylint.sh  setup.py
.github/workflows/: ci.yaml  doc.yaml
doc/: OrderedSets.rst  api.rst  conf.py  index.rst  speed.rst
examples/: demo.py  speed.py
orderedsets/: OrderedSets.pyx  __init__.py
test/: test_indexset.py  test_orderedsets.py  test_pickle.py  test_speed.py
