[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "orderedsets"
version = "2024.1"
authors = [
  { name="Matthias Diener", email="matthias.diener@gmail.com" },
  { name="Andreas Kloeckner", email="inform@tiker.net" },
]
description = "An implementation of mutable and immutable ordered sets."
dependencies = [
    "importlib_metadata;python_version<'3.8'"
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/matthiasdiener/orderedsets/"
"Bug Tracker" = "https://github.com/matthiasdiener/orderedsets/issues"

[tool.flake8]
ignore = ['W503']
max-line-length = 85
count = true
inline-quotes = "double"
